moved data notebook

--- a/data/data.ipynb
+++ b/data/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -141,13 +141,13 @@
        "[113 rows x 3 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cpi_df = pd.read_csv('../data/raw_data/cpi.csv')\n",
+    "cpi_df = pd.read_csv('raw_data/cpi.csv')\n",
     "cpi_2025 = cpi_df.loc[cpi_df['Year'] == 2025, 'CPI'].iloc[0]\n",
     "cpi_df['cpi_mult'] = cpi_2025 / cpi_df['CPI']\n",
     "cpi_df"
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -269,13 +269,13 @@
        "[65 rows x 2 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pop_df = pd.read_csv('../data/raw_data/POPTOTUSA647NWDB.csv')\n",
+    "pop_df = pd.read_csv('raw_data/POPTOTUSA647NWDB.csv')\n",
     "pop_df['Year'] = pop_df['observation_date'].str[:4]\n",
     "pop_df = pop_df.rename(columns={'POPTOTUSA647NWDB': 'Population'})\n",
     "pop_df = pop_df.drop(columns=['observation_date'])\n",
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -412,13 +412,13 @@
        "[1836 rows x 3 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "state_pop_df = pd.read_excel('../data/raw_data/state_pop.xlsx', sheet_name=1)\n",
+    "state_pop_df = pd.read_excel('raw_data/state_pop.xlsx', sheet_name=1)\n",
     "\n",
     "# Reshape data and fix values\n",
     "state_pop_df = pd.melt(state_pop_df, id_vars=['observation_date'], var_name='State', value_name='Population')\n",
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1104,13 +1104,13 @@
        "55                 6621.86           100284.23  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "annual_df = pd.read_excel('../data/raw_data/snap-annualsummary-9.xlsx', header=2)\n",
+    "annual_df = pd.read_excel('raw_data/snap-annualsummary-9.xlsx', header=2)\n",
     "annual_df = annual_df.iloc[:-4]\n",
     "annual_df = annual_df.rename(\n",
     "    columns={\n",
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1850,7 +1850,7 @@
        "55             6803.396487       103033.494833  1.027415  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1884,7 +1884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2007,7 +2007,7 @@
        "55           0.122625  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2029,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2037,23 +2037,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-0bb750e253944a438e0fbc795b76d75f.vega-embed {\n",
+       "  #altair-viz-e9014b24cf7a413f8852c8c8af72dbbe.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-0bb750e253944a438e0fbc795b76d75f.vega-embed details,\n",
-       "  #altair-viz-0bb750e253944a438e0fbc795b76d75f.vega-embed details summary {\n",
+       "  #altair-viz-e9014b24cf7a413f8852c8c8af72dbbe.vega-embed details,\n",
+       "  #altair-viz-e9014b24cf7a413f8852c8c8af72dbbe.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-0bb750e253944a438e0fbc795b76d75f\"></div>\n",
+       "<div id=\"altair-viz-e9014b24cf7a413f8852c8c8af72dbbe\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-0bb750e253944a438e0fbc795b76d75f\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-0bb750e253944a438e0fbc795b76d75f\");\n",
+       "    if (outputDiv.id !== \"altair-viz-e9014b24cf7a413f8852c8c8af72dbbe\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-e9014b24cf7a413f8852c8c8af72dbbe\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -2108,7 +2108,7 @@
        "alt.HConcatChart(...)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2137,7 +2137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2145,23 +2145,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-fb9131589d8f477e9824f09c1f713e25.vega-embed {\n",
+       "  #altair-viz-972260f254f64976884239d13f02d631.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-fb9131589d8f477e9824f09c1f713e25.vega-embed details,\n",
-       "  #altair-viz-fb9131589d8f477e9824f09c1f713e25.vega-embed details summary {\n",
+       "  #altair-viz-972260f254f64976884239d13f02d631.vega-embed details,\n",
+       "  #altair-viz-972260f254f64976884239d13f02d631.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-fb9131589d8f477e9824f09c1f713e25\"></div>\n",
+       "<div id=\"altair-viz-972260f254f64976884239d13f02d631\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-fb9131589d8f477e9824f09c1f713e25\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-fb9131589d8f477e9824f09c1f713e25\");\n",
+       "    if (outputDiv.id !== \"altair-viz-972260f254f64976884239d13f02d631\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-972260f254f64976884239d13f02d631\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -2216,7 +2216,7 @@
        "alt.HConcatChart(...)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2258,7 +2258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2409,13 +2409,13 @@
        "1109                                   2293203.0  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "state_df = pd.read_csv('../data/raw_data/state_snap.csv')\n",
+    "state_df = pd.read_csv('raw_data/state_snap.csv')\n",
     "state_df = state_df.sort_values(by=['State', 'Year'])\n",
     "state_df.head()"
    ]
@@ -2429,7 +2429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2586,7 +2586,7 @@
        "4                                5.114874e+06  2.230450  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2611,7 +2611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2940,7 +2940,7 @@
        "[1902 rows x 13 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2976,7 +2976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3055,19 +3055,19 @@
        "4  2012         0.081  0.48    US"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Gini Coefficient\n",
-    "gini_df = pd.read_csv('../data/raw_data/Income inequality (Gini Coefficient).csv', skiprows=6)\n",
+    "gini_df = pd.read_csv('raw_data/Income inequality (Gini Coefficient).csv', skiprows=6)\n",
     "gini_df = gini_df.drop(columns=['Fips', 'Data Type', 'MOE'])\n",
     "gini_df = gini_df.rename(columns={'Data': 'Gini'})\n",
     "\n",
     "# Unemployment Rate\n",
-    "unemp_df = pd.read_csv('../data/raw_data/Unemployment rate by Total.csv', skiprows=6)\n",
+    "unemp_df = pd.read_csv('raw_data/Unemployment rate by Total.csv', skiprows=6)\n",
     "unemp_df = unemp_df.drop(columns=['Fips', 'Data Type', 'MOE'])\n",
     "unemp_df = unemp_df.rename(columns={'Data': 'Unemployment'})\n",
     "\n",
@@ -3098,7 +3098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -3226,7 +3226,7 @@
        "4  1.477762    713982.0           0.105346   Alaska              0.080  0.42  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3255,7 +3255,7 @@
     ")\n",
     "\n",
     "# Output to csv\n",
-    "state_df.to_csv('../data/clean_data/state.csv')\n",
+    "state_df.to_csv('clean_data/state.csv')\n",
     "\n",
     "# View\n",
     "state_df.head()"
@@ -3270,7 +3270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3279,7 +3279,7 @@
     "shadac_us_df = pd.merge(shadac_us_df, annual_df, how='left', on='Year')\n",
     "shadac_us_df = shadac_us_df.sort_values(by='Year')\n",
     "\n",
-    "shadac_us_df.to_csv('../data/clean_data/national.csv')"
+    "shadac_us_df.to_csv('clean_data/national.csv')"
    ]
   },
   {
@@ -3292,19 +3292,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "# convert shapefile to geojson\n",
-    "state_gdf = gpd.read_file('../data/raw_data/cb_2018_us_state_20m/cb_2018_us_state_20m.shp')\n",
+    "state_gdf = gpd.read_file('raw_data/cb_2018_us_state_20m/cb_2018_us_state_20m.shp')\n",
     "state_gdf = state_gdf.to_crs(epsg=4326)\n",
-    "state_gdf.to_file('../data/clean_data/state_geometries.geojson', driver='GeoJSON')"
+    "state_gdf.to_file('clean_data/state_geometries.geojson', driver='GeoJSON')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -3312,23 +3312,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-d0b9be3bd8d54351a83a501723d3ee0a.vega-embed {\n",
+       "  #altair-viz-9847a9deb6354e95837cc063ce6ee050.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-d0b9be3bd8d54351a83a501723d3ee0a.vega-embed details,\n",
-       "  #altair-viz-d0b9be3bd8d54351a83a501723d3ee0a.vega-embed details summary {\n",
+       "  #altair-viz-9847a9deb6354e95837cc063ce6ee050.vega-embed details,\n",
+       "  #altair-viz-9847a9deb6354e95837cc063ce6ee050.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-d0b9be3bd8d54351a83a501723d3ee0a\"></div>\n",
+       "<div id=\"altair-viz-9847a9deb6354e95837cc063ce6ee050\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-d0b9be3bd8d54351a83a501723d3ee0a\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-d0b9be3bd8d54351a83a501723d3ee0a\");\n",
+       "    if (outputDiv.id !== \"altair-viz-9847a9deb6354e95837cc063ce6ee050\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-9847a9deb6354e95837cc063ce6ee050\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -3383,7 +3383,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3404,7 +3404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3790,7 +3790,7 @@
        "[967 rows x 21 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3802,12 +3802,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save\n",
-    "snap_state_gdf.to_file('../data/clean_data/state.geojson', driver='GeoJSON')"
+    "snap_state_gdf.to_file('clean_data/state.geojson', driver='GeoJSON')"
    ]
   }
  ],
