reordered directory for docs

--- a/data/data.ipynb
+++ b/data/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "[113 rows x 3 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
        "[65 rows x 2 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
        "[1836 rows x 3 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1104,7 +1104,7 @@
        "55                 6621.86           100284.23  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1850,7 +1850,7 @@
        "55             6803.396487       103033.494833  1.027415  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1884,7 +1884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2007,7 +2007,7 @@
        "55           0.122625  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2029,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2037,23 +2037,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-e9014b24cf7a413f8852c8c8af72dbbe.vega-embed {\n",
+       "  #altair-viz-a7d6e0fafe0f42de8ff1432374410eb4.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-e9014b24cf7a413f8852c8c8af72dbbe.vega-embed details,\n",
-       "  #altair-viz-e9014b24cf7a413f8852c8c8af72dbbe.vega-embed details summary {\n",
+       "  #altair-viz-a7d6e0fafe0f42de8ff1432374410eb4.vega-embed details,\n",
+       "  #altair-viz-a7d6e0fafe0f42de8ff1432374410eb4.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-e9014b24cf7a413f8852c8c8af72dbbe\"></div>\n",
+       "<div id=\"altair-viz-a7d6e0fafe0f42de8ff1432374410eb4\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-e9014b24cf7a413f8852c8c8af72dbbe\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-e9014b24cf7a413f8852c8c8af72dbbe\");\n",
+       "    if (outputDiv.id !== \"altair-viz-a7d6e0fafe0f42de8ff1432374410eb4\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-a7d6e0fafe0f42de8ff1432374410eb4\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -2108,7 +2108,7 @@
        "alt.HConcatChart(...)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2137,7 +2137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2145,23 +2145,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-972260f254f64976884239d13f02d631.vega-embed {\n",
+       "  #altair-viz-ee248a5ec9934e3bb8522532eaf7eb87.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-972260f254f64976884239d13f02d631.vega-embed details,\n",
-       "  #altair-viz-972260f254f64976884239d13f02d631.vega-embed details summary {\n",
+       "  #altair-viz-ee248a5ec9934e3bb8522532eaf7eb87.vega-embed details,\n",
+       "  #altair-viz-ee248a5ec9934e3bb8522532eaf7eb87.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-972260f254f64976884239d13f02d631\"></div>\n",
+       "<div id=\"altair-viz-ee248a5ec9934e3bb8522532eaf7eb87\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-972260f254f64976884239d13f02d631\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-972260f254f64976884239d13f02d631\");\n",
+       "    if (outputDiv.id !== \"altair-viz-ee248a5ec9934e3bb8522532eaf7eb87\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-ee248a5ec9934e3bb8522532eaf7eb87\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -2216,7 +2216,7 @@
        "alt.HConcatChart(...)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2253,12 +2253,12 @@
     "source: https://www.fns.usda.gov/pd/supplemental-nutrition-assistance-program-snap\n",
     "- snap.py script aggregates district data from 1989-2004 into state level data\n",
     "- script found in data > raw_data\n",
-    "- cleaned data found in data > clean_data > **state_snap.csv**"
+    "- cleaned data found in docs > clean_data > **state_snap.csv**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2409,7 +2409,7 @@
        "1109                                   2293203.0  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2429,7 +2429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2586,7 +2586,7 @@
        "4                                5.114874e+06  2.230450  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2611,7 +2611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -2940,7 +2940,7 @@
        "[1902 rows x 13 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2976,7 +2976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -3055,7 +3055,7 @@
        "4  2012         0.081  0.48    US"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3098,7 +3098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -3226,7 +3226,7 @@
        "4  1.477762    713982.0           0.105346   Alaska              0.080  0.42  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3255,7 +3255,7 @@
     ")\n",
     "\n",
     "# Output to csv\n",
-    "state_df.to_csv('clean_data/state.csv')\n",
+    "state_df.to_csv('../docs/clean_data/state.csv')\n",
     "\n",
     "# View\n",
     "state_df.head()"
@@ -3270,7 +3270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3279,7 +3279,7 @@
     "shadac_us_df = pd.merge(shadac_us_df, annual_df, how='left', on='Year')\n",
     "shadac_us_df = shadac_us_df.sort_values(by='Year')\n",
     "\n",
-    "shadac_us_df.to_csv('clean_data/national.csv')"
+    "shadac_us_df.to_csv('../docs/clean_data/national.csv')"
    ]
   },
   {
@@ -3292,19 +3292,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "# convert shapefile to geojson\n",
     "state_gdf = gpd.read_file('raw_data/cb_2018_us_state_20m/cb_2018_us_state_20m.shp')\n",
     "state_gdf = state_gdf.to_crs(epsg=4326)\n",
-    "state_gdf.to_file('clean_data/state_geometries.geojson', driver='GeoJSON')"
+    "state_gdf.to_file('../docs/clean_data/state_geometries.geojson', driver='GeoJSON')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -3312,23 +3312,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-9847a9deb6354e95837cc063ce6ee050.vega-embed {\n",
+       "  #altair-viz-088f6520b2614ca3af82bf328db95543.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-9847a9deb6354e95837cc063ce6ee050.vega-embed details,\n",
-       "  #altair-viz-9847a9deb6354e95837cc063ce6ee050.vega-embed details summary {\n",
+       "  #altair-viz-088f6520b2614ca3af82bf328db95543.vega-embed details,\n",
+       "  #altair-viz-088f6520b2614ca3af82bf328db95543.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-9847a9deb6354e95837cc063ce6ee050\"></div>\n",
+       "<div id=\"altair-viz-088f6520b2614ca3af82bf328db95543\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-9847a9deb6354e95837cc063ce6ee050\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-9847a9deb6354e95837cc063ce6ee050\");\n",
+       "    if (outputDiv.id !== \"altair-viz-088f6520b2614ca3af82bf328db95543\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-088f6520b2614ca3af82bf328db95543\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -3383,7 +3383,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3404,7 +3404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -3790,7 +3790,7 @@
        "[967 rows x 21 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3802,12 +3802,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save\n",
-    "snap_state_gdf.to_file('clean_data/state.geojson', driver='GeoJSON')"
+    "snap_state_gdf.to_file('../docs/clean_data/state.geojson', driver='GeoJSON')"
    ]
   }
  ],
